--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,10 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <a href="/login">Sign in</a>
+    <div>
+      <a href="/login">Sign in</a>
+    </div>
+    </br>
+    <img src="https://s3media.247sports.com/Uploads/Assets/343/429/7429343.jpg"/>
   </body>
 </html>
