add register views

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,12 +8,14 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <input type="text" placeholder="Username" />
+    <input type="text" placeholder="First Name" />
+    <input type="text" placeholder="Last Name" />
+    <input type="text" placeholder="User Name" />
     <input type="text" placeholder="Password" />
+    <input type="text" placeholder="Confirm Password" />
     <button>Submit</button>
     <div>
-      <a href="/register">Sign up</a>
-      <a href="/">Home</a>
+      <a href="/">Cancel</a>
     </div>
   </body>
 </html>
