add register page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,8 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <div>
-      <a href="/login">Sign in</a>
+      <a href="/login">Sign In</a>
+      <a href="/register">Sign Up</a>
     </div>
     </br>
     <img src="https://s3media.247sports.com/Uploads/Assets/343/429/7429343.jpg"/>
