--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,9 +11,10 @@
     <input type="text" placeholder="Username" />
     <input type="text" placeholder="Password" />
     <button>Submit</button>
+    <a href="/">Cancel</a>
     <div>
+      <p>Don't have an account?</p>
       <a href="/register">Sign up</a>
-      <a href="/">Home</a>
     </div>
   </body>
 </html>
