--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,11 +8,14 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <input type="text" placeholder="Username" />
-    <input type="text" placeholder="Password" />
-    <button>Submit</button>
-    <a href="/">Cancel</a>
-    <div>
+    <div class="section">
+      <input type="text" placeholder="Username" />
+      <input type="text" placeholder="Password" />
+      <button>Sign In</button>
+      <a href="/">Cancel</a>
+    </div>
+    <hr/>
+    <div class="section">
       <p>Don't have an account?</p>
       <a href="/register">Sign up</a>
     </div>
