--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,13 +8,19 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <input type="text" placeholder="First Name" />
-    <input type="text" placeholder="Last Name" />
-    <input type="text" placeholder="User Name" />
-    <input type="text" placeholder="Password" />
-    <input type="text" placeholder="Confirm Password" />
-    <button>Submit</button>
-    <div>
+    <div class="section">
+      <input type="text" placeholder="First Name" />
+      <input type="text" placeholder="Last Name" />
+    </div>
+    <br/>
+    <div class="section">
+      <input type="text" placeholder="User Name" />
+      <input type="text" placeholder="Password" />
+      <input type="text" placeholder="Confirm Password" />
+    </div>
+    <hr/>
+    <div class="section">
+      <button>Submit</button>
       <a href="/">Cancel</a>
     </div>
   </body>
