--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,16 +3,16 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="./javascripts/homePage.js"></script>
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Welcome to the home page.</p>
     <div>
-      <a href="/login">Sign In</a>
+      <a class="color-success" href="/login">Sign In</a>
       <a href="/register">Sign Up</a>
     </div>
     </br>
     <img src="https://s3media.247sports.com/Uploads/Assets/343/429/7429343.jpg"/>
+    <script src="./javascripts/homePage.js"></script>
   </body>
 </html>
