--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,6 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="./javascripts/loginPage.js"></script>
   </head>
   <body>
     <h1><%= title %></h1>
@@ -20,8 +19,9 @@
     </div>
     <hr/>
     <div class="section">
-      <button>Submit</button>
-      <a href="/">Cancel</a>
+      <button id="register-user">Register user</button>
+      <a class="color-error" href="/">Cancel</a>
     </div>
+    <script src="./javascripts/registerPage.js"></script>
   </body>
 </html>
