--- a/views/bones.ejs
+++ b/views/bones.ejs
@@ -7,5 +7,6 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <!-- This is just a bare bones template for your pages -->
   </body>
 </html>
