--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,6 @@
   <head>
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
-    <script src="./javascripts/loginPage.js"></script>
   </head>
   <body>
     <h1><%= title %></h1>
@@ -11,7 +10,7 @@
     <div class="section">
       <input type="text" placeholder="Username" />
       <input type="text" placeholder="Password" />
-      <button>Sign In</button>
+      <button id="sign-in-user">Sign In</button>
       <a href="/">Cancel</a>
     </div>
     <hr/>
@@ -19,5 +18,6 @@
       <p>Don't have an account?</p>
       <a href="/register">Sign up</a>
     </div>
+    <script src="./javascripts/loginPage.js"></script>
   </body>
 </html>
