--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,8 +8,8 @@
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <div class="section">
-      <input type="text" placeholder="Username" />
-      <input type="text" placeholder="Password" />
+      <input id="username-input" type="text" placeholder="Username" />
+      <input id="password-input" type="password" placeholder="Password" />
       <button id="sign-in-user">Sign In</button>
       <a href="/">Cancel</a>
     </div>
