add password input to register page

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,8 +14,8 @@
     <br/>
     <div class="section">
       <input type="text" placeholder="User Name" />
-      <input type="text" placeholder="Password" />
-      <input type="text" placeholder="Confirm Password" />
+      <input type="password" placeholder="Password" />
+      <input type="password" placeholder="Confirm Password" />
     </div>
     <hr/>
     <div class="section">
