--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -6,12 +6,12 @@
   </head>
   <body>
     <h1><%= title %></h1>
-    <p>Welcome to the home page.</p>
+    <p>Welcome to the dashboard page.</p>
     <div>
-      <a class="color-success" href="/login">Sign In</a>
-      <a href="/register">Sign Up</a>
+      <a class="color-error" href="/">Sign out</a>
     </div>
     </br>
+    <img src="https://s3media.247sports.com/Uploads/Assets/343/429/7429343.jpg"/>
     <script src="./javascripts/homePage.js"></script>
   </body>
 </html>
