--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
       <input id="username-input" type="text" placeholder="Username" />
       <input id="password-input" type="password" placeholder="Password" />
       <button id="sign-in-user">Sign In</button>
-      <a href="/">Cancel</a>
+      <a class="color-error" href="/">Cancel</a>
     </div>
     <hr/>
     <div class="section">
