add profile page

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,8 +7,12 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to the dashboard page.</p>
+    <a href="/profile">User Profile</a>
+    <a class="color-error" href="/">Sign out</a>
+    <hr/>
     <div>
-      <a class="color-error" href="/">Sign out</a>
+      <h3>Upload file</h3>
+      <input id="file-upload" type="file">
     </div>
     </br>
     <img src="https://s3media.247sports.com/Uploads/Assets/343/429/7429343.jpg"/>
