--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,10 +7,11 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to the home page.</p>
-    <div>
+    <div class="section">
       <a class="color-success" href="/login">Sign In</a>
       <a href="/register">Sign Up</a>
     </div>
+    <hr/>
     </br>
     <script src="./javascripts/homePage.js"></script>
   </body>
