--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,5 +11,6 @@
     <a class="color-error" href="/">Sign out</a>
     <hr/>
     <p>Welcome to the user profile page!</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/w0HgHet0sxg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </body>
 </html>
